envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: AUTO
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: /dev/stdout
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: nginx1
                      domains: ["nginx1.localhost"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nginx1 }
                    - name: nginx2
                      domains: ["nginx2.localhost"]
                      routes:
                        - match: { prefix: "/" }
                          route: { cluster: nginx2 }
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: nginx1
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: nginx1
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: nginx1, port_value: 80 }
    - name: nginx2
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: nginx2
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: { address: nginx2, port_value: 80 }
